--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -7,5 +7,9 @@
         <members>TriggerParametersTest</members>
         <name>ApexClass</name>
     </types>
+    <types>
+        <members>*</members>
+        <name>ApexTrigger</name>
+    </types>
     <version>55.0</version>
 </Package>
